--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
 <body>
     <header>
         <p class="high-score-link">View high scores</p>
-        <p>Time: 0</p>
+        <p id="timer">Time: 0</p>
     </header>
 
     <!-- Hero / Jumbotron -->
-    <section class="hero">
+    <section class="hero" id="hero-section">
         <!-- subtitle container -->
         <div class="grid-container">
-            <h1 class="center-column">Coding Quiz Challenge</h1>
+            <h1 class="center-column heading">Coding Quiz Challenge</h1>
             <p class="center-column" id="hero-paragraph">
                 Try to answer the following code-related questions within the time limit.  Keep in mind that incorrect answers will penalize your score/time by ten seconds!
             </p>
-            <button class="center-column">
+            <button class="center-column" id="start-button">
                 Start Quiz
             </button>
         </div>
-        
+    </section>
 
+    <section class="center-column question-heading" id="question-area">
+        <!-- <div class="grid-container" id="question-grid"></div> -->
     </section>
 
 
