gave logic to know which answer button was clicked

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     <section class="center-column question-heading" id="question-area">
         <!-- <div class="grid-container" id="question-grid"></div> -->
     </section>
+    <footer id="foot">
+        <!-- <div class="grid-container">
+            <p class="center-column" id="footer-message">Wrong!</p>
+        </div> -->
+        
+    </footer>
 
 
 
