--- a/index.html
+++ b/index.html
@@ -29,10 +29,24 @@
     <section class="center-column question-heading" id="question-area">
         <!-- <div class="grid-container" id="question-grid"></div> -->
     </section>
+
+    <section class="center-column question-heading" id="final-area">
+        <!-- <h1 class='center-column'>All done!</h1>
+        <p class='center-column'>Your final score is " + correctAnswers + ".</p>
+        <form class='final-form' id='give-initials'>
+	        <div class='form-group'>
+		        <p>Enter Initials:</p>
+	        </div>
+	        <div class='form-group'>
+		        <input type='text' name='initials' id ='initials-input' class='text-input'/>
+	        </div>
+	        <div class='form-group'>
+		        <button type='submit' id='save-task' class='submit-button'>submit</button>
+	        </div>
+        </form> -->
+    </section>
+
     <footer id="foot">
-        <!-- <div class="grid-container">
-            <p class="center-column" id="footer-message">Wrong!</p>
-        </div> -->
         
     </footer>
 
